# Cuenta-Bancaria

./: .gitignore  pyproject.toml
CuentaBancaria/: apps.py  models.py  signals.py  urls.py  views.py
CuentaBancaria/migrations/: 0001_initial.py  0002_alter_cliente_id.py  0003_alter_cliente_id_transaccion.py
CuentaBancaria/static/CuentaBancaria/: style.css
CuentaBancaria/templates/CuentaBancaria/: chatbot.html  completar_perfil.html  historial_transacciones.html  home.html  login.html  menu.html  register.html  tasa_cambio.html
CuentaBancaria/templates/registration/: password_reset.html  password_reset_done.html  password_reset_form.html  password_reset_sent.html
config/: settings.py  urls.py
