[project]
name = "python-django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "deep-translator>=1.11.4",
    "dotenv>=0.9.9",
    "requests>=2.32.5",
    "social-auth-app-django>=5.7.0",
    "social-auth-app-django-mongoengine>=1.0.0",
]
